--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TestServer</title>
+  <title><%= render_title %></title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<% if flash[:error] %>
+		<div id="error"><%= flash[:error] %></div>
+	<% end %>
 
+	<% if flash[:alert] %>
+		<div id="alert"><%= flash[:alert] %></div>
+	<% end %>
+
+	<% if flash[:notice] %>
+		<div id="noticed"><%= flash[:notice] %></div>
+	<% end %>
 <%= yield %>
 
 </body>
